# TembleOS

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  ash.c  dropbear_ed25519_host_key.pub  localoptions.h  main.c  shell_common.h  test_forkless.py  test_tvm.c  tvm.c  tvm.h
.github/workflows/: ci.yaml
forkless/: CMakeLists.txt
forkless/src/: main.c
src/: main.c  tvm.c  tvm.h
tests/: CMakeLists.txt  test_forkless.py  test_tvm.c
tvm/: CMakeLists.txt
tvm/src/: main.c  tvm.c
